Agregar direccion y mapa en registro y perfil

--- a/view/profileView.mustache
+++ b/view/profileView.mustache
@@ -20,11 +20,18 @@
             <li class="list-group-item"><strong> Nombre:</strong> {{nombre}}</li>
             <li class="list-group-item"><strong> Nacimiento:</strong> {{fecha_nacimiento}}</li>
             <li class="list-group-item"><strong> Sexo:</strong> {{sexo}}</li>
-            <li class="list-group-item"><strong> País:</strong> {{tipo_residencia}}</li>
+            <li class="list-group-item"><strong> País:</strong> {{pais}}</li>
+            <li class="list-group-item"><strong> Ciudad:</strong> {{ciudad}}</li>
+
         </ul>
+
+        <div id="map" style="height: 300px; border-radius: 1rem;"></div>
         <!-- Botón opcional -->
         <!-- <div class="d-grid">
             <a href="#" class="btn btn-outline-primary btn-sm">Editar perfil</a>
         </div> -->
     </div>
 </div>
+
+
+
