--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -38,6 +38,13 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="https://www.gstatic.com/charts/loader.js"></script>
+
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="{{BASE_URL}}/public/js/mapa.js"></script>
+<script src="{{BASE_URL}}/public/js/autocompletarCiudad.js"></script>
+<script src="{{BASE_URL}}/public/js/mostrarMapaPerfil.js"></script>
+
 <script>
     const respuestasData = {
         labels: ['Usuario A', 'Usuario B', 'Usuario C'],
