--- a/view/verPreguntaPropuestaView.mustache
+++ b/view/verPreguntaPropuestaView.mustache
@@ -1,7 +1,7 @@
 <h2 class="mb-4">Revisión de Pregunta Propuesta</h2>
 
 <div class="card mb-3">
-    <h2>{{pregunta}}</h2>
+    <h2>{{preguntasPropuestas}}</h2>
     <p><strong>Categoría:</strong> {{categoria}}</p>
     <p><strong>Propuesta por:</strong> {{nombre_usuario}}</p>
 
