--- a/view/profileView.mustache
+++ b/view/profileView.mustache
@@ -1,11 +1,14 @@
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="card shadow p-4" style="width: 100%; max-width: 420px; border-radius: 1rem;">
-        <!-- Encabezado -->
-        <h3 class="text-center mb-4 text-primary fw-bold d-flex justify-content-center align-items-center gap-2">
+        <!-- Encabezado-->
+        <h2 class="text-center mb-4 text-primary fw-bold d-flex justify-content-center align-items-center gap-2 perfil-titulo">
             <img src="https://cdn6.aptoide.com/imgs/1/a/3/1a354d9524ca67a64e36f511d210a621_icon.png" alt="Pokebola" width="30">
-            Mi Perfil
+
+            {{#es_propio}}Perfil de Usuario{{/es_propio}}
+            {{^es_propio}}Perfil del Jugador{{/es_propio}}
+
             <img src="https://cdn6.aptoide.com/imgs/1/a/3/1a354d9524ca67a64e36f511d210a621_icon.png" alt="Pokebola" width="30">
-        </h3>
+        </h2>
 
         <!-- Imagen de perfil -->
         <div class="text-center mb-3">
@@ -15,7 +18,8 @@
 
         <!-- Datos del usuario -->
         <div class="perfil-datos">
-        <ul class="list-group list-group-flush mb-3">
+
+            <ul class="list-group list-group-flush mb-3">
             <li class="list-group-item"><strong> Usuario:</strong> {{nombre_usuario}}</li>
             <li class="list-group-item"><strong> Email:</strong> {{email}}</li>
             <li class="list-group-item"><strong> Nombre:</strong> {{nombre}}</li>
@@ -28,10 +32,12 @@
         </div>
 
         <div id="mapPerfil" style="height: 300px; border-radius: 1rem;"></div>
-        <!--    <div class="perfil-accion">
-            <a href="#" class="btn-editar">Editar Perfil</a>
-            <a class="btn-salir" href="/login/logout">Cerrar Sesión</a>
-        </div>-->
+        {{#es_propio}}
+            <div class="perfil-accion">
+                <a href="#" class="btn-editar">Editar Perfil</a>
+                <a class="btn-salir" href="/login/logout">Cerrar Sesión</a>
+            </div>
+        {{/es_propio}}
     </div>
 </div>
 
