--- a/view/profileView.mustache
+++ b/view/profileView.mustache
@@ -22,14 +22,15 @@
             <li class="list-group-item"><strong> Sexo:</strong> {{sexo}}</li>
             <li class="list-group-item"><strong> País:</strong> {{pais}}</li>
             <li class="list-group-item"><strong> Ciudad:</strong> {{ciudad}}</li>
-
         </ul>
 
-        <div id="mapPerfil" style="height: 300px; border-radius: 1rem;"></div>
-        <!-- Botón opcional -->
-        <!-- <div class="d-grid">
-            <a href="#" class="btn btn-outline-primary btn-sm">Editar perfil</a>
-        </div> -->
+        <!-- Mapa -->
+        <div id="mapPerfil" style="height: 300px; border-radius: 1rem;" class="mb-3"></div>
+
+        <!-- Botón Editar -->
+        <div class="d-grid">
+            <a href="/profile/editUser" class="btn btn-outline-primary btn-sm">Editar perfil</a>
+        </div>
     </div>
 </div>
 
@@ -37,5 +38,4 @@
     const userLat = Number({{latitud}}) || -34.6037;
     const userLon = Number({{longitud}}) || -58.3816;
 </script>
-
 
