agregue el ajax en email, esta funcionando + css

--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -43,6 +43,7 @@
 <script src="{{BASE_URL}}/public/js/mapa.js"></script>
 <script src="{{BASE_URL}}/public/js/autocompletarCiudad.js"></script>
 <script src="{{BASE_URL}}/public/js/mostrarMapaPerfil.js"></script>
+<script src="{{BASE_URL}}/public/js/emailAjax.js"></script>
 
 <script>
     const respuestasData = {
