--- a/view/header.mustache
+++ b/view/header.mustache
@@ -15,37 +15,34 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-
-
-
-<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
-    <a class="navbar-brand text-nav" href="/lobby/show"><img class="img-nav" src="{{BASE_URL}}/public/imgs/logo.png"> </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+        <!-- Logo -->
+        <a class="navbar-brand text-nav d-flex align-items-center" href="/lobby/show">
+            <img class="img-nav me-2" src="{{BASE_URL}}/public/imgs/logo.png" alt="Logo" style="height: 40px;width: 80px">
+        </a>
 
+        <!-- Botón hamburguesa -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+
+    <!-- Contenido colapsable -->
     <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
         <ul class="navbar-nav align-items-center">
-
             {{#username}}
-                <li class="nav-item text-white mx-2 ms-5 text-nav fs-5">
-                    Hola, {{username}}!
-                </li>
-
+                <li class="nav-item text-white mx-2 ms-5 text-nav fs-5">Hola, {{username}}!</li>
                 {{#isJugador}}
                     <li class="nav-item"><a class="nav-link text-nav ms-5 fs-5" href="/ranking/show">Ranking</a></li>
                     <li class="nav-item"><a class="nav-link text-nav ms-5 fs-5" href="/listaPartida/show">Partidas</a></li>
                 {{/isJugador}}
-
                 {{#isEditor}}
                     <li class="nav-item"><a class="nav-link text-nav ms-5 fs-5" href="/editor/show">Editor</a></li>
                 {{/isEditor}}
-
                 {{#isAdmin}}
                     <li class="nav-item"><a class="nav-link text-nav ms-5 fs-5" href="/administrador/show">Administrador</a></li>
                 {{/isAdmin}}
-
                 <li class="nav-item"><a class="nav-link text-nav ms-5 fs-5" href="/profile/show">Perfil</a></li>
                 <li class="nav-item"><a class="nav-link text-nav ms-5 fs-5" href="/login/logout">Salir</a></li>
             {{/username}}
@@ -54,7 +51,6 @@
                 <li class="nav-item"><a class="btn btn-warning me-2" href="/register/show">Registrarse</a></li>
                 <li class="nav-item"><a class="btn btn-outline-light me-2" href="/login/show">Login</a></li>
             {{/username}}
-
         </ul>
     </div>
 </nav>
