--- a/view/profileGamerView.mustache
+++ b/view/profileGamerView.mustache
@@ -22,8 +22,10 @@
             <li class="list-group-item"><strong> Email:</strong> {{email}}</li>
             <li class="list-group-item"><strong> Puntaje Total:</strong> {{puntaje_total}}</li>
             <li class="list-group-item"><strong> Partidas jugadas :</strong> {{cant_partidas}}</li>
-            <img src="/profileGamer/generarQr/{{id_usuario}}" alt="codigo qr" width="300" height="300">
         </ul>
+        <div class="text-center">
+            <img src="/profileGamer/generarQr/{{id_usuario}}" alt="codigo qr" width="300" height="300">
+        </div>
         {{/jugador}}
     </div>
 </div>
