--- a/view/footer.mustache
+++ b/view/footer.mustache
@@ -1,27 +1,37 @@
-
 <!-- Footer -->
-<footer class="w3-container w3-center w3-light-grey w3-xlarge bg-dark py-3 d-flex justify-content-between align-items-center">
-    <div class="d-flex gap-5">
-        <p class="p-footer mb-0">Lautaro Rossi</p>
-        <p class="p-footer mb-0">-</p>
-        <p class="p-footer mb-0">Facundo Guillen</p>
-    </div>
+<footer class="w3-light-grey w3-xlarge bg-dark py-3 text-white">
+    <div class="container">
+        <div class="row text-center text-md-start align-items-center">
 
-    <div class="d-flex gap-5">
-        <i class="fa fa-facebook-official w3-hover-opacity fb"></i>
-        <i class="fa fa-instagram w3-hover-opacity ig"></i>
-        <i class="fa fa-snapchat w3-hover-opacity sp"></i>
-        <i class="fa fa-pinterest-p w3-hover-opacity pt"></i>
-        <i class="fa fa-twitter w3-hover-opacity tw"></i>
-        <i class="fa fa-linkedin w3-hover-opacity lk"></i>
-    </div>
+            <!-- Columna izquierda (oculta en pantallas pequeñas) -->
+            <div class="col-12 col-md-4 mb-3 mb-md-0 d-none d-md-flex flex-row justify-content-center gap-2">
+                <p class="p-footer mb-0">Lautaro Rossi</p>
+                <p class="p-footer mb-0">-</p>
+                <p class="p-footer mb-0">Facundo Guillen</p>
+            </div>
 
-    <div class="d-flex gap-5">
-        <p class="p-footer mb-0">Pilar Rodriguez</p>
-        <p class="p-footer mb-0">-</p>
-        <p class="p-footer mb-0">Anahi Quelca</p>
+            <!-- Redes sociales (siempre visibles) -->
+            <div class="col-12 col-md-4 mb-3 mb-md-0 d-flex justify-content-center gap-3">
+                <i class="fa fa-facebook-official w3-hover-opacity fb"></i>
+                <i class="fa fa-instagram w3-hover-opacity ig"></i>
+                <i class="fa fa-snapchat w3-hover-opacity sp"></i>
+                <i class="fa fa-pinterest-p w3-hover-opacity pt"></i>
+                <i class="fa fa-twitter w3-hover-opacity tw"></i>
+                <i class="fa fa-linkedin w3-hover-opacity lk"></i>
+            </div>
+
+            <!-- Columna derecha (oculta en pantallas pequeñas) -->
+            <div class="col-12 col-md-4 d-none d-md-flex flex-row justify-content-center gap-2">
+                <p class="p-footer mb-0">Pilar Rodriguez</p>
+                <p class="p-footer mb-0">-</p>
+                <p class="p-footer mb-0">Anahi Quelca</p>
+            </div>
+
+        </div>
     </div>
 </footer>
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
