Arreglitos del estilo en la vista del editor

--- a/view/editorView.mustache
+++ b/view/editorView.mustache
@@ -1,3 +1,4 @@
+<main>
 <h1>Perfil editor</h1>
 
 <form action="/editor/filterCategory" method="POST" class="mb-4 d-flex gap-3 align-items-end flex-wrap">
@@ -74,5 +75,5 @@
         <li class="list-group-item">No hay preguntas para mostrar.</li>
     {{/preguntas}}
 </ul>
-
+</main>
 
