--- a/view/preguntasPropuestasEditorView.mustache
+++ b/view/preguntasPropuestasEditorView.mustache
@@ -1,4 +1,5 @@
-<h2 class="mt-5">Preguntas Propuestas por Usuarios</h2>
+<main>
+<h2 class="mt-3">Preguntas Propuestas por Usuarios</h2>
 
 <ul class="list-group">
     {{#preguntasPropuestas}}
@@ -16,3 +17,7 @@
         <li class="list-group-item">No hay preguntas propuestas para mostrar.</li>
     {{/preguntasPropuestas}}
 </ul>
+    <div class="mt-4">
+        <a href="/editor/show" class="btn btn-outline-secondary">Volver al perfil del editor</a>
+    </div>
+</main>
