--- a/view/preguntasReportadasView.mustache
+++ b/view/preguntasReportadasView.mustache
@@ -1,9 +1,5 @@
-<h1>Preguntas Reportadas</h1>
-
-<p class="mb-4 text-muted">
-    A su vez puede revisar las preguntas reportadas, para <strong>aprobar</strong> o <strong>dar de baja</strong>.
-</p>
-
+<main>
+    <h2 class="mt-3">Preguntas Reportadas por Usuarios</h2>
 <ul class="list-group">
     {{#preguntasReportadas}}
         <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -30,7 +26,7 @@
     {{/preguntasReportadas}}
 </ul>
 
-<!-- Botón para volver al perfil del editor -->
 <div class="mt-4">
     <a href="/editor/show" class="btn btn-outline-secondary">Volver al perfil del editor</a>
 </div>
+</main>
