borre img para ver si me deja subir el archivo zip

--- a/view/preguntaView.mustache
+++ b/view/preguntaView.mustache
@@ -109,6 +109,7 @@
     }
 
 
+    /*function registrarSeleccion() */
     botones.forEach(boton => {
         boton.addEventListener("click", () => {
             if (respuestaYaEnviada) return;
